# membermocker

./: .env.example  .gitignore  OLLAMA.md  docker-compose.dev.yml  docker-compose.yml  main.py  prd.md  pyproject.toml  readme.md
backend/: .dockerignore  Dockerfile  TESTING.md  conftest.py  pyproject.toml  test_api.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: custom_field.py  member.py
backend/app/services/: generator.py
backend/data/: members.duckdb
backend/tests/: test_api.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CustomFieldForm.jsx  CustomFieldList.jsx  MapView.jsx  MemberForm.jsx  MemberList.jsx
frontend/src/pages/: DataSetPage.jsx
frontend/src/services/: api.jsx
