[project]
name = "fake-member-data"
version = "0.1.0"
description = "A project to create fake SF member data that can be shared openly and used for code testing purposes."
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.1",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "ollama>=0.4.7",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
